--- a/css/pages-css/deluxe-room.css
+++ b/css/pages-css/deluxe-room.css
@@ -9,7 +9,9 @@
   .hero-section {
     animation: heroEntrance 1.2s ease-out forwards;
     opacity: 0;
-    
+    background: linear-gradient(rgba(26,54,95,0.9), rgba(26,54,95,0.7));
+    color: aliceblue;
+    height: 220px;
   }
   
   @keyframes heroEntrance {
