--- a/css/contact-section.css
+++ b/css/contact-section.css
@@ -3,14 +3,14 @@
     background-color: #f2f2f2;
   }
   
-  .contact-section .section-title {
+  .contact-section .contact-section-title {
     text-align: center;
     font-size: 36px;
     font-weight: bold;
     color: #333;
     margin-bottom: 50px;
   }
-  
+
   .contact-section img {
     width: 100%;
     height: auto;
