--- a/css/pages-css/restaurant.css
+++ b/css/pages-css/restaurant.css
@@ -1,5 +1,5 @@
 .hero-restaurant {
-    background: linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url('/assets/images');
+    background: linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url('/assets/images/chef-spesial-img.jpg');
     height: 60vh;
     background-size: cover;
     background-position: center;
